--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Per Anders's Nettbutikk</title>
 </head>
+
 <body>
-    <header>
+    <div id="main-grid">
+    <header id="global-header">
         <form>
             <label>
                 <input type="search" placeholder="søk her">
@@ -20,12 +22,17 @@
         <nav>
             <a href="index.html">Hjem</a>
             <a href="index.html#products">Produkter</a>
-            <a href="index.html">Logo</a>
+            <a href="index.html" id="logo">
+                <img src="https://picsum.photos/id/40/100/100" alt="logo">
+            </a>
             <a href="index.html#categories">Kategorier</a>
             <a href="#contact">Kontakt oss</a>
         </nav>
-            <i class=""
-            <i class"
+        <ul>
+            <li><i class="fa-solid fa-user-large"></i></li>
+            <li><i class="fa-regular fa-heart"></i></li>
+            <li><i class="fa-solid fa-cart-shopping"></i></li>
+        </ul>
     </header>
 
     <main>
@@ -75,5 +82,6 @@
             </ul>
 
     </footer>
+    </div>
 </body>
 </html>
