--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -23,14 +23,13 @@
             <a href="index.html">Hjem</a>
             <a href="index.html#products">Produkter</a>
             <a href="index.html" id="logo">
-                <img src="https://picsum.photos/id/40/100/100" alt="logo">
-            </a>
+                <img src="C:\Users\peran\OneDrive\Dokumenter\Eksamen2024\Eksamensmappa\css\ressurser/seagull.png" alt="logo"></a>
             <a href="index.html#categories">Kategorier</a>
-            <a href="#contact">Kontakt oss</a>
+            <a href="index.html#contact">Kontakt oss</a>
         </nav>
         <ul>
             <li><i class="fa-solid fa-user-large"></i></li>
-            <li><i class="fa-regular fa-heart"></i></li>
+            <li><i class="fa-solid fa-heart"></i></li>
             <li><i class="fa-solid fa-cart-shopping"></i></li>
         </ul>
     </header>
@@ -58,7 +57,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="contact">
  
             <h3>Logo og info</h3>
             <p>Slagord eller informasjon om bedriften.</p>
