--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -30,15 +30,13 @@
         <ul>
             <li><i class="fa-solid fa-user-large"></i></li>
             <li><i class="fa-solid fa-heart"></i></li>
-            <li><i class="fa-solid fa-cart-shopping"></i></li>
+            <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
     </header>
 
     <main>
         <section id="banner">
-            <h1>Velkommen til vår butikk!</h1>
-            <p>Finn de beste produktene til fantastiske priser.</p>
-            <a href="#products" class="button">Se våre produkter</a>
+            <h1>her skal det være stort bildeslider</h1>
         </section>
 
         <section id="products">
