--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -23,21 +23,33 @@
             <a href="index.html">Hjem</a>
             <a href="index.html#products">Produkter</a>
             <a href="index.html" id="logo">
-                <img src="C:\Users\peran\OneDrive\Dokumenter\Eksamen2024\Eksamensmappa\css\ressurser/seagull.png" alt="logo"></a>
+                <img src="css/ressurser/koala.jpg" alt="logo"></a>
             <a href="index.html#categories">Kategorier</a>
             <a href="index.html#contact">Kontakt oss</a>
         </nav>
         <ul>
-            <li><i class="fa-solid fa-user-large"></i></li>
-            <li><i class="fa-solid fa-heart"></i></li>
+            <li><a href="#"><i class="fa-solid fa-user-large"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
             <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
     </header>
 
     <main>
-        <section id="banner">
-            <h1>her skal det være stort bildeslider</h1>
-        </section>
+        <div class="slide-container">
+            <section class="slides">
+                <figure class="slide">
+                    <img src="css/ressurser/forest.png" alt="a little exotic forest">
+                    <h2 class="text-overlay">Loretsum nibh non feremento</h2>
+                    <p class="text-overlay">Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
+                </figure>
+                <figure class="slide">
+                    <img src="css/ressurser/bridge_forest.jpg" alt="bridge in the forest">
+                </figure>
+                <figure class="slide">
+                    <img src="css/ressurser/tropical.jpg" alt="a tropical forest">
+                </figure>
+            </section>
+        </div>
 
         <section id="products">
             <h2>Våre mest populære produkter</h2>
@@ -55,28 +67,35 @@
         </section>
     </main>
 
-    <footer id="contact">
+    <footer id="global-footer">
  
-            <h3>Logo og info</h3>
-            <p>Slagord eller informasjon om bedriften.</p>
+        <img src="css/ressurser/koala.jpg" alt="logo"></a>
+        <p>Levagona distota peritium</p>
 
+        <section class="information">
             <h3>Kontakt</h3>
-            <p>Adresse, telefon, e-post</p>
-
+            <p>Adresse: B R A Veien 4, 1757 Halden</p>
+            <p>Telefon: 69 60 80 00</p>
+            <p>E-post: pafredri@hiof.no</p>
+            <p>Åpningstider: 07:00 - 15:30</p>
+        </section>
+        <section class="shortcuts">
             <h3>Snarveier</h3>
             <ul>
-                <li><a href="index.html">Hjem</a></li>
+                <li><a href="index.html#categories">Kategorier</a></li>
                 <li><a href="product.html">Produkter</a></li>
-                <li><a href="checkout.html">Kasse</a></li>
+                <li><a href="index.html#contact">Kontakt oss</a></li>
             </ul>
-
-            <h3>Sosiale medier</h3>
+        </section>
+        <section class="social-media">
+            <h3>Sosiale Medier</h3>
             <ul>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Pinterest</a></li>
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-pinterest"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-brands fa-linkedin"></i></li>
             </ul>
+        </section>
 
     </footer>
     </div>
