Mer slider og footer
Slider er nå nesten ferdig, og footer også trenger bare små-justeringer for å kalles "ferdig".

--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -38,14 +38,21 @@
         <div class="slide-container">
             <section class="slides">
                 <figure class="slide">
+                    <h2>Loretsum nibh non feremento</h2>
+                    <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
+                    <a href="#" class="btn">Les mer</a>
                     <img src="css/ressurser/forest.png" alt="a little exotic forest">
-                    <h2 class="text-overlay">Loretsum nibh non feremento</h2>
-                    <p class="text-overlay">Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
                 </figure>
                 <figure class="slide">
+                    <h2>Loretsum nibh non feremento</h2>
+                    <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
+                    <a href="#" class="btn">Les mer</a>
                     <img src="css/ressurser/bridge_forest.jpg" alt="bridge in the forest">
                 </figure>
                 <figure class="slide">
+                    <h2>Loretsum nibh non feremento</h2>
+                    <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
+                    <a href="#" class="btn">Les mer</a>
                     <img src="css/ressurser/tropical.jpg" alt="a tropical forest">
                 </figure>
             </section>
@@ -62,25 +69,25 @@
         </section>
 
         <section id="reviews">
-            <h2>Hva kundene sier</h2>
+            <h2>Annmeldelser</h2>
                 <!-- Anmeldelseskort her -->
         </section>
     </main>
 
     <footer id="global-footer">
- 
-        <img src="css/ressurser/koala.jpg" alt="logo"></a>
-        <p>Levagona distota peritium</p>
-
+        <img src="css/ressurser/koala.jpg" alt="mini-logo">
+            <p>Levagona distota peritium</p>
         <section class="information">
             <h3>Kontakt</h3>
-            <p>Adresse: B R A Veien 4, 1757 Halden</p>
-            <p>Telefon: 69 60 80 00</p>
-            <p>E-post: pafredri@hiof.no</p>
-            <p>Åpningstider: 07:00 - 15:30</p>
+            <ul>
+                <li><i class="fa-solid fa-location-dot"></i> Adresse: B R A Veien 4, 1757 Halden</li>
+                <li><i class="fa-solid fa-phone"></i> Telefon: 69 60 80 00</li>
+                <li><i class="fa-solid fa-envelope"></i> E-post: pafredri@hiof.no</li>
+                <li><i class="fa-solid fa-clock"></i> Åpningstider: 07:00 - 15:30</li>
+            </ul>
         </section>
         <section class="shortcuts">
-            <h3>Snarveier</h3>
+            <h3>Snareveier</h3>
             <ul>
                 <li><a href="index.html#categories">Kategorier</a></li>
                 <li><a href="product.html">Produkter</a></li>
@@ -90,10 +97,10 @@
         <section class="social-media">
             <h3>Sosiale Medier</h3>
             <ul>
-                <li><i class="fa-brands fa-facebook"></i></li>
-                <li><i class="fa-brands fa-pinterest"></i></li>
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><i class="fa-brands fa-linkedin"></i></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
         </section>
 
