--- a/Eksamensmappa/checkout.html
+++ b/Eksamensmappa/checkout.html
@@ -57,28 +57,33 @@
         </section>
     </main>
 
-    <footer id="contact">
- 
-            <h3>Logo og info</h3>
-            <p>Slagord eller informasjon om bedriften.</p>
-
+    <footer id="global-footer">
+        <img src="css/ressurser/koala.jpg" alt="mini-logo">
+            <p>Levagona distota peritium</p>
+        <section class="information">
             <h3>Kontakt</h3>
-            <p>Adresse, telefon, e-post</p>
-
-            <h3>Snarveier</h3>
+            <li><i class="fa-solid fa-location-dot"></i> Adresse: B R A Veien 4, 1757 Halden</li>
+            <li><i class="fa-solid fa-phone"></i> Telefon: 69 60 80 00</li>
+            <li><i class="fa-solid fa-envelope"></i> E-post: pafredri@hiof.no</li>
+            <li><i class="fa-solid fa-clock"></i> Åpningstider: 07:00 - 15:30</li>
+        </section>
+        <section class="shortcuts">
+            <h3>Snareveier</h3>
             <ul>
-                <li><a href="index.html">Hjem</a></li>
+                <li><a href="index.html#categories">Kategorier</a></li>
                 <li><a href="product.html">Produkter</a></li>
-                <li><a href="checkout.html">Kasse</a></li>
+                <li><a href="index.html#contact">Kontakt oss</a></li>
             </ul>
-
-            <h3>Sosiale medier</h3>
+        </section>
+        <section class="social-media">
+            <h3>Sosiale Medier</h3>
             <ul>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Pinterest</a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
+        </section>
 
     </footer>
     </div>
