--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Per Anders Søstrand Fredriksen">
     <link rel="stylesheet" href="css/ikoner/css/solid.css">
     <link rel="stylesheet" href="css/ikoner/css/fontawesome.css">
     <link rel="stylesheet" href="css/ikoner/css/brands.css">
@@ -36,30 +37,35 @@
 
     <main>
         <div class="slide-container">
+            <button class="slider-arrow left-arrow">&#10094;</button> 
             <section class="slides">
                 <figure class="slide">
-                    <h2>Loretsum nibh non feremento</h2>
+                    <h3>Loretsum nibh non feremento</h3>
                     <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
-                    <a href="#" class="btn">Les mer</a>
+                    <a href="#" class="btn-slider">Les mer</a>
                     <img src="css/ressurser/forest.png" alt="a little exotic forest">
                 </figure>
                 <figure class="slide">
-                    <h2>Loretsum nibh non feremento</h2>
+                    <h3>Loretsum nibh non feremento</h3>
                     <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
-                    <a href="#" class="btn">Les mer</a>
+                    <a href="#" class="btn-slider">Les mer</a>
                     <img src="css/ressurser/bridge_forest.jpg" alt="bridge in the forest">
                 </figure>
                 <figure class="slide">
-                    <h2>Loretsum nibh non feremento</h2>
+                    <h3>Loretsum nibh non feremento</h3>
                     <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
-                    <a href="#" class="btn">Les mer</a>
+                    <a href="#" class="btn-slider">Les mer</a>
                     <img src="css/ressurser/tropical.jpg" alt="a tropical forest">
                 </figure>
             </section>
+            <button class="slider-arrow right-arrow">&#10095;</button>
         </div>
 
         <section id="products">
             <h2>Våre mest populære produkter</h2>
+            <a href="#" class="btn-product">New Product</a>
+            <a href="#" class="btn-product">Special Price</a>
+            <a href="#" class="btn-product">Best Sellers</a>
                 <!-- Produktkort her -->
         </section>
 
