--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -63,6 +63,7 @@
 
         <section id="products">
             <h2>Våre mest populære produkter</h2>
+            <p>En smakebit av det vi har å tilby</p>
             <a href="#" class="btn-product">New Product</a>
             <a href="#" class="btn-product">Special Price</a>
             <a href="#" class="btn-product">Best Sellers</a>
