--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/ikoner/css/fontawesome.css">
     <link rel="stylesheet" href="css/ikoner/css/brands.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="css/ressurser/koala.jpg" type="image/x-icon">
     <title>Per Anders's Nettbutikk</title>
 </head>
 
@@ -39,36 +40,123 @@
         <div class="slide-container">
             <button class="slider-arrow left-arrow">&#10094;</button> 
             <section class="slides">
-                <figure class="slide">
+                <article class="slide">
                     <h3>Loretsum nibh non feremento</h3>
                     <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
                     <a href="#" class="btn-slider">Les mer</a>
                     <img src="css/ressurser/forest.png" alt="a little exotic forest">
-                </figure>
-                <figure class="slide">
+                </article>
+                <article class="slide">
                     <h3>Loretsum nibh non feremento</h3>
                     <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
                     <a href="#" class="btn-slider">Les mer</a>
                     <img src="css/ressurser/bridge_forest.jpg" alt="bridge in the forest">
-                </figure>
-                <figure class="slide">
+                </article>
+                <article class="slide">
                     <h3>Loretsum nibh non feremento</h3>
                     <p>Pellentesque eleifend odio dolor, eget placerat nibh facilisis non. Nunc fermentum lorem eu purus venenatis convallis. Nam lobortis porta elementum. Morbi efficitur sem sed libero rhoncus, iaculis pulvinar nunc blandit. Aliquam iaculis, velit nec mollis luctus, mi sem bibendum eros, id tincidunt nulla ante in leo. Aliquam tincidunt augue eget posuere egestas. Nulla et nulla felis.</p>
                     <a href="#" class="btn-slider">Les mer</a>
                     <img src="css/ressurser/tropical.jpg" alt="a tropical forest">
-                </figure>
+                </article>
             </section>
             <button class="slider-arrow right-arrow">&#10095;</button>
         </div>
 
-        <section id="products">
-            <h2>Våre mest populære produkter</h2>
-            <p>En smakebit av det vi har å tilby</p>
-            <a href="#" class="btn-product">New Product</a>
-            <a href="#" class="btn-product">Special Price</a>
-            <a href="#" class="btn-product">Best Sellers</a>
-                <!-- Produktkort her -->
-        </section>
+        <div id="pop-products">
+            <section id="product-buttons">
+                <h2>Våre mest populære produkter</h2>
+                <p>En smakebit av det vi har å tilby</p>
+                <a href="#" class="btn-product">New Product</a>
+                <a href="#" class="btn-product">Special Price</a>
+                <a href="#" class="btn-product">Best Sellers</a>
+            </section>
+            <section id="product-gallery">
+                    <figure class="product-item">
+                        <img src="https://picsum.photos/350/400" alt="product image">
+                        <section class="product-tekst-placement">
+                            <h3><a href="product.html">Product name</a></h3>
+                            <p>Kr 1249</p>
+                        </section>
+                        <section>
+                            <p class="review-count">Review 472</p>
+                            <ul class="stars">
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                            </ul>
+                        </section>
+                        <i class="fa-solid fa-heart"></i>
+                    </figure>
+                    <figure class="product-item">
+                        <img src="https://picsum.photos/350/400" alt="product image">
+                        <h3><a href="product.html">Product name</a></h3>
+                        <p>Kr 1249</p>
+                        <ul class="stars">
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                        </ul>
+                        <i class="fa-solid fa-heart"></i>
+                    </figure>
+                    <figure class="product-item">
+                        <img src="https://picsum.photos/350/400" alt="product image">
+                        <h3><a href="product.html">Product name</a></h3>
+                        <p>Kr 1249</p>
+                        <ul class="stars">
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                        </ul>
+                        <i class="fa-solid fa-heart"></i>
+                    </figure>
+                    <figure class="product-item">
+                        <img src="https://picsum.photos/350/400" alt="product image">
+                        <h3><a href="product.html">Product name</a></h3>
+                        <p>Kr 1249</p>
+                        <ul class="stars">
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                        </ul>
+                        <i class="fa-solid fa-heart"></i>
+                    </figure>
+                    <figure class="product-item">
+                        <img src="https://picsum.photos/350/400" alt="product image">
+                        <h3><a href="product.html">Product name</a></h3>
+                        <p>Kr 1249</p>
+                        <ul class="stars">
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                        </ul>
+                        <i class="fa-solid fa-heart"></i>
+                    </figure>
+                    <figure class="product-item">
+                        <img src="https://picsum.photos/350/400" alt="product image">
+                        <h3><a href="product.html">Product name</a></h3>
+                        <p>Kr 1249</p>
+                        <ul class="stars">
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                            <li><i class="fa-solid fa-star"></i></li>
+                        </ul>
+                        <i class="fa-solid fa-heart"></i>
+                    </figure>
+                    <!-- Add more product items here -->               
+            </section>
+        </div>
 
         <section id="categories">
             <h2>Våre mest populære kategorier</h2>
@@ -82,8 +170,10 @@
     </main>
 
     <footer id="global-footer">
-        <img src="css/ressurser/koala.jpg" alt="mini-logo">
+        <section class="top">
+            <img src="css/ressurser/koala.jpg" alt="mini-logo">
             <p>Levagona distota peritium</p>
+        </section>
         <section class="information">
             <h3>Kontakt</h3>
             <ul>
