--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/ikoner/css/solid.css">
     <link rel="stylesheet" href="css/ikoner/css/fontawesome.css">
     <link rel="stylesheet" href="css/ikoner/css/brands.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="css/ressurser/koala.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/mobilefirst.css">
+    <link rel="icon" href="css/mobilefirstcss/koala.jpg" type="image/x-icon">
     <title>Per Anders's Nettbutikk</title>
 </head>
 
@@ -143,6 +143,7 @@
                     </figure>
                     <figure class="product-item">
                         <img src="https://picsum.photos/350/400" alt="product image">
+                            <i class="fa-solid fa-heart"></i>
                         <h3><a href="product.html">Product name</a></h3>
                         <p>Kr 1249</p>
                         <ul class="stars">
@@ -152,7 +153,6 @@
                             <li><i class="fa-solid fa-star"></i></li>
                             <li><i class="fa-solid fa-star"></i></li>
                         </ul>
-                        <i class="fa-solid fa-heart"></i>
                     </figure>
                     <!-- Add more product items here -->               
             </section>
