Våre mest populære produkter
Våre mest populære produkter er nå ferdig. Andre småjusteringer har også blitt gjort. Startet på å gjøre footer ferdig.

--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/ikoner/css/solid.css">
     <link rel="stylesheet" href="css/ikoner/css/fontawesome.css">
     <link rel="stylesheet" href="css/ikoner/css/brands.css">
-    <link rel="stylesheet" href="css/mobilefirst.css">
-    <link rel="icon" href="css/mobilefirstcss/koala.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="css/ressurser/koala.jpg" type="image/x-icon">
     <title>Per Anders's Nettbutikk</title>
 </head>
 
@@ -72,13 +72,12 @@
             </section>
             <section id="product-gallery">
                     <figure class="product-item">
-                        <img src="https://picsum.photos/350/400" alt="product image">
+                        <img src="https://picsum.photos/350/375" alt="product image">
                         <section class="product-tekst-placement">
                             <h3><a href="product.html">Product name</a></h3>
                             <p>Kr 1249</p>
                         </section>
-                        <section>
-                            <p class="review-count">Review 472</p>
+                        <section class="reviews">
                             <ul class="stars">
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star"></i></li>
@@ -86,75 +85,96 @@
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star"></i></li>
                             </ul>
+                            <p class="review-count">472 Reviews</p>
                         </section>
                         <i class="fa-solid fa-heart"></i>
                     </figure>
                     <figure class="product-item">
-                        <img src="https://picsum.photos/350/400" alt="product image">
-                        <h3><a href="product.html">Product name</a></h3>
-                        <p>Kr 1249</p>
-                        <ul class="stars">
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                        </ul>
+                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <section class="product-tekst-placement">
+                            <h3><a href="product.html">Product name</a></h3>
+                            <p>Kr 1249</p>
+                        </section>
+                        <section class="reviews">
+                            <ul class="stars">
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                            </ul>
+                            <p class="review-count">472 Reviews</p>
+                        </section>
                         <i class="fa-solid fa-heart"></i>
-                    </figure>
-                    <figure class="product-item">
-                        <img src="https://picsum.photos/350/400" alt="product image">
-                        <h3><a href="product.html">Product name</a></h3>
-                        <p>Kr 1249</p>
-                        <ul class="stars">
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                        </ul>
+                    </figure><figure class="product-item">
+                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <section class="product-tekst-placement">
+                            <h3><a href="product.html">Product name</a></h3>
+                            <p>Kr 1249</p>
+                        </section>
+                        <section class="reviews">
+                            <ul class="stars">
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                            </ul>
+                            <p class="review-count">472 Reviews</p>
+                        </section>
                         <i class="fa-solid fa-heart"></i>
-                    </figure>
-                    <figure class="product-item">
-                        <img src="https://picsum.photos/350/400" alt="product image">
-                        <h3><a href="product.html">Product name</a></h3>
-                        <p>Kr 1249</p>
-                        <ul class="stars">
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                        </ul>
+                    </figure><figure class="product-item">
+                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <section class="product-tekst-placement">
+                            <h3><a href="product.html">Product name</a></h3>
+                            <p>Kr 1249</p>
+                        </section>
+                        <section class="reviews">
+                            <ul class="stars">
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                            </ul>
+                            <p class="review-count">472 Reviews</p>
+                        </section>
                         <i class="fa-solid fa-heart"></i>
-                    </figure>
-                    <figure class="product-item">
-                        <img src="https://picsum.photos/350/400" alt="product image">
-                        <h3><a href="product.html">Product name</a></h3>
-                        <p>Kr 1249</p>
-                        <ul class="stars">
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                        </ul>
+                    </figure><figure class="product-item">
+                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <section class="product-tekst-placement">
+                            <h3><a href="product.html">Product name</a></h3>
+                            <p>Kr 1249</p>
+                        </section>
+                        <section class="reviews">
+                            <ul class="stars">
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                            </ul>
+                            <p class="review-count">472 Reviews</p>
+                        </section>
                         <i class="fa-solid fa-heart"></i>
-                    </figure>
-                    <figure class="product-item">
-                        <img src="https://picsum.photos/350/400" alt="product image">
-                            <i class="fa-solid fa-heart"></i>
-                        <h3><a href="product.html">Product name</a></h3>
-                        <p>Kr 1249</p>
-                        <ul class="stars">
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                            <li><i class="fa-solid fa-star"></i></li>
-                        </ul>
-                    </figure>
-                    <!-- Add more product items here -->               
+                    </figure><figure class="product-item">
+                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <section class="product-tekst-placement">
+                            <h3><a href="product.html">Product name</a></h3>
+                            <p>Kr 1249</p>
+                        </section>
+                        <section class="reviews">
+                            <ul class="stars">
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                            </ul>
+                            <p class="review-count">472 Reviews</p>
+                        </section>
+                        <i class="fa-solid fa-heart"></i>
+                    </figure>               
             </section>
         </div>
 
@@ -175,7 +195,7 @@
             <p>Levagona distota peritium</p>
         </section>
         <section class="information">
-            <h3>Kontakt</h3>
+            <h3>KONTAKT</h3>
             <ul>
                 <li><i class="fa-solid fa-location-dot"></i> Adresse: B R A Veien 4, 1757 Halden</li>
                 <li><i class="fa-solid fa-phone"></i> Telefon: 69 60 80 00</li>
@@ -184,7 +204,7 @@
             </ul>
         </section>
         <section class="shortcuts">
-            <h3>Snareveier</h3>
+            <h3>SNARVEIER</h3>
             <ul>
                 <li><a href="index.html#categories">Kategorier</a></li>
                 <li><a href="product.html">Produkter</a></li>
@@ -192,7 +212,7 @@
             </ul>
         </section>
         <section class="social-media">
-            <h3>Sosiale Medier</h3>
+            <h3>SOSIALE MEDIER</h3>
             <ul>
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
