Endret mobile størrelse
Ble endret fra 700px til 425px, så nå er dette en del av endringene som har blitt gjort

--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -23,11 +23,11 @@
          </form>
         <nav>
             <a href="index.html">Hjem</a>
-            <a href="index.html#products">Produkter</a>
+            <a href="index.html#pop-products">Produkter</a>
             <a href="index.html" id="logo">
                 <img src="css/ressurser/koala.jpg" alt="logo"></a>
             <a href="index.html#categories">Kategorier</a>
-            <a href="index.html#contact">Kontakt oss</a>
+            <a href="index.html#global-footer">Kontakt oss</a>
         </nav>
         <ul>
             <li><a href="#"><i class="fa-solid fa-user-large"></i></a></li>
@@ -63,9 +63,11 @@
         </div>
 
         <div id="pop-products">
-            <section id="product-buttons">
+            <section id="product-title">
                 <h2>Våre mest populære produkter</h2>
                 <p>En smakebit av det vi har å tilby</p>
+            </section>
+            <section id="product-buttons">
                 <a href="#" class="btn-product">New Product</a>
                 <a href="#" class="btn-product">Special Price</a>
                 <a href="#" class="btn-product">Best Sellers</a>
@@ -192,7 +194,7 @@
     <footer id="global-footer">
         <section class="top">
             <img src="css/ressurser/koala.jpg" alt="mini-logo">
-            <p>Levagona distota peritium</p>
+            <p>Mauris non urna aliquet, volutpat dui eu, tincidunt ex. Nulla fermentum malesuada facilisis. Pellentesque placerat et nisl id fringilla.</p>
         </section>
         <section class="information">
             <h3>KONTAKT</h3>
@@ -214,10 +216,10 @@
         <section class="social-media">
             <h3>SOSIALE MEDIER</h3>
             <ul>
-                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a></li>
+                <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
         </section>
 
