Sources, og start på kategorier
Kilder har blitt lagt til, også har jeg nå begynt på kategorier

--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -74,7 +74,7 @@
             </section>
             <section id="product-gallery">
                     <figure class="product-item">
-                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <img src="https://picsum.photos/350/375" alt="first product image">
                         <section class="product-tekst-placement">
                             <h3><a href="product.html">Product name</a></h3>
                             <p>Kr 1249</p>
@@ -92,7 +92,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </figure>
                     <figure class="product-item">
-                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <img src="https://picsum.photos/350/375" alt="second product image">
                         <section class="product-tekst-placement">
                             <h3><a href="product.html">Product name</a></h3>
                             <p>Kr 1249</p>
@@ -109,7 +109,7 @@
                         </section>
                         <i class="fa-solid fa-heart"></i>
                     </figure><figure class="product-item">
-                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <img src="https://picsum.photos/350/375" alt="third product image">
                         <section class="product-tekst-placement">
                             <h3><a href="product.html">Product name</a></h3>
                             <p>Kr 1249</p>
@@ -126,7 +126,7 @@
                         </section>
                         <i class="fa-solid fa-heart"></i>
                     </figure><figure class="product-item">
-                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <img src="https://picsum.photos/350/375" alt="fourth product image">
                         <section class="product-tekst-placement">
                             <h3><a href="product.html">Product name</a></h3>
                             <p>Kr 1249</p>
@@ -143,7 +143,7 @@
                         </section>
                         <i class="fa-solid fa-heart"></i>
                     </figure><figure class="product-item">
-                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <img src="https://picsum.photos/350/375" alt="fifth product image">
                         <section class="product-tekst-placement">
                             <h3><a href="product.html">Product name</a></h3>
                             <p>Kr 1249</p>
@@ -160,7 +160,7 @@
                         </section>
                         <i class="fa-solid fa-heart"></i>
                     </figure><figure class="product-item">
-                        <img src="https://picsum.photos/350/375" alt="product image">
+                        <img src="https://picsum.photos/350/375" alt="sixth product image">
                         <section class="product-tekst-placement">
                             <h3><a href="product.html">Product name</a></h3>
                             <p>Kr 1249</p>
@@ -179,11 +179,34 @@
                     </figure>               
             </section>
         </div>
-
-        <section id="categories">
-            <h2>Våre mest populære kategorier</h2>
-                <!-- Kategorikort her -->
-        </section>
+        
+        <div id="pop-categories">
+            <section id="category-tittle">
+                <h2>Våre mest populære kategorier</h2>
+            </section>
+            <section class="categories">
+                <figure>
+                    <figcaption class="overlay">CATEGORY 1</figcaption> 
+                    <img src="css/ressurser/koala_close.jpg" alt="category first image">
+                </figure>
+                <figure>
+                    <figcaption class="overlay">CATEGORY 2</figcaption>
+                    <img src="css/ressurser/leaf.jpg" alt="category second image">
+                </figure>
+                <figure>
+                    <figcaption class="overlay">CATEGORY 3</figcaption>
+                    <img src="css/ressurser/insect.jpg" alt="category third image">
+                </figure>
+                <figure>
+                    <figcaption class="overlay">CATEGORY 4</figcaption>
+                    <img src="css/ressurser/koala_distant.jpg" alt="category fourth image">
+                </figure>
+                <figure>
+                    <figcaption class="overlay">CATEGORY 5</figcaption>
+                    <img src="css/ressurser/forest_fire.jpg" alt="category fifth image">
+                </figure>
+            </section>
+        </div>
 
         <section id="reviews">
             <h2>Annmeldelser</h2>
