--- a/Eksamensmappa/checkout.html
+++ b/Eksamensmappa/checkout.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Per Anders Søstrand Fredriksen">
     <link rel="stylesheet" href="css/ikoner/css/solid.css">
     <link rel="stylesheet" href="css/ikoner/css/fontawesome.css">
     <link rel="stylesheet" href="css/ikoner/css/brands.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="css/ressurser/koala.jpg" type="image/x-icon">
     <title>Per Anders's Nettbutikk</title>
 </head>
 
@@ -21,70 +23,20 @@
          </form>
         <nav>
             <a href="index.html">Hjem</a>
-            <a href="index.html#products">Produkter</a>
+            <a href="index.html#pop-products">Produkter</a>
             <a href="index.html" id="logo">
-                <img src="C:\Users\peran\OneDrive\Dokumenter\Eksamen2024\Eksamensmappa\css\ressurser/seagull.png" alt="logo"></a>
+                <img src="css/ressurser/koala.jpg" alt="logo"></a>
             <a href="index.html#categories">Kategorier</a>
-            <a href="index.html#contact">Kontakt oss</a>
+            <a href="index.html#global-footer">Kontakt oss</a>
         </nav>
         <ul>
-            <li><i class="fa-solid fa-user-large"></i></li>
-            <li><i class="fa-solid fa-heart"></i></li>
-            <li><i class="fa-solid fa-cart-shopping"></i></li>
+            <li><a href="#"><i class="fa-solid fa-user-large"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+            <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
     </header>
-
     <main>
-        <section id="banner">
-            <h1>Du er på produkt nå bitch</h1>
-            <p>Finn de beste produktene til fantastiske priser.</p>
-            <a href="#products" class="button">Se våre produkter</a>
-        </section>
-
-        <section id="products">
-            <h2>Våre mest populære produkter</h2>
-                <!-- Produktkort her -->
-        </section>
-
-        <section id="categories">
-            <h2>Våre mest populære kategorier</h2>
-                <!-- Kategorikort her -->
-        </section>
-
-        <section id="reviews">
-            <h2>Hva kundene sier</h2>
-                <!-- Anmeldelseskort her -->
-        </section>
     </main>
-
-    <footer id="global-footer">
-        <img src="css/ressurser/koala.jpg" alt="mini-logo">
-            <p>Levagona distota peritium</p>
-        <section class="information">
-            <h3>Kontakt</h3>
-            <li><i class="fa-solid fa-location-dot"></i> Adresse: B R A Veien 4, 1757 Halden</li>
-            <li><i class="fa-solid fa-phone"></i> Telefon: 69 60 80 00</li>
-            <li><i class="fa-solid fa-envelope"></i> E-post: pafredri@hiof.no</li>
-            <li><i class="fa-solid fa-clock"></i> Åpningstider: 07:00 - 15:30</li>
-        </section>
-        <section class="shortcuts">
-            <h3>Snareveier</h3>
-            <ul>
-                <li><a href="index.html#categories">Kategorier</a></li>
-                <li><a href="product.html">Produkter</a></li>
-                <li><a href="index.html#contact">Kontakt oss</a></li>
-            </ul>
-        </section>
-        <section class="social-media">
-            <h3>Sosiale Medier</h3>
-            <ul>
-                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-            </ul>
-        </section>
-
     </footer>
     </div>
 </body>
