--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -26,7 +26,7 @@
             <a href="index.html#pop-products">Produkter</a>
             <a href="index.html" id="logo">
                 <img src="css/ressurser/koala.jpg" alt="logo"></a>
-            <a href="index.html#categories">Kategorier</a>
+            <a href="index.html#pop-categories">Kategorier</a>
             <a href="index.html#global-footer">Kontakt oss</a>
         </nav>
         <ul>
